<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MasterDetail</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone">Phone</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="edit">Edit Record</string>

</resources>
